--- a/toddlist-re/style.css
+++ b/toddlist-re/style.css
@@ -7,7 +7,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    opacity: 0.5;
+    opacity: 0.7;
     top: 0;
     left: 0;
     z-index: -1;
@@ -35,4 +35,16 @@
   flex: 1;
   height: 1px;
   background: #eee;
+}
+
+.todoForm {
+    padding: 1em;
+}
+
+.inputBox {
+    left: 50%;
+}
+
+h2.clockText {
+    display: inline;
 }
