--- a/style.css
+++ b/style.css
@@ -13,22 +13,7 @@
     z-index: -1;
 }
 
-/* #loginForm {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: rgb(113, 173, 33)
-} */
-
-/* .greeting {
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: rgb(0, 0, 0)
-} */
-
+/* 부트스트랩 속성 */
 .divider:after,
 .divider:before {
   content: "";
